# CS412_ComputerVision

./: .gitignore
CS412 Homework01/: .gitignore  CMakeLists.txt  Report.docx
CS412 Homework01/CS412 Homework01/: main.cpp
CS412 Homework01/CS412 Homework01.xcodeproj/: project.pbxproj
CS412 Homework01/CS412 Homework01.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CS412 Homework01/CS412 Homework01.xcodeproj/project.xcworkspace/xcuserdata/Tmbao.xcuserdatad/: UserInterfaceState.xcuserstate
CS412 Homework01/CS412 Homework01.xcodeproj/project.xcworkspace/xcuserdata/Tmbao.xcuserdatad/xcdebugger/: Expressions.xcexplist
CS412 Homework01/CS412 Homework01.xcodeproj/xcuserdata/Tmbao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CS412 Homework01/CS412 Homework01.xcodeproj/xcuserdata/Tmbao.xcuserdatad/xcschemes/: CS412 Homework01 Static Image.xcscheme  CS412 Homework01.xcscheme  xcschememanagement.plist
CS412 Homework01/CS412 Homework01/image_provider/: CameraImageProvider.cpp  CameraImageProvider.hpp  ImageProviderInterface.hpp  StaticImageProvider.cpp  StaticImageProvider.hpp
CS412 Homework01/CS412 Homework01/manipulations/: ComputeDerivativeWrtX.cpp  ComputeDerivativeWrtX.hpp  ComputeDerivativeWrtY.cpp  ComputeDerivativeWrtY.hpp  ComputeGradientMagnitude.cpp  ComputeGradientMagnitude.hpp  Convert2GrayManually.cpp  Convert2GrayManually.hpp  Convert2GrayOpencv.cpp  Convert2GrayOpencv.hpp  DrawGradient.cpp  DrawGradient.hpp  GaussianBlurManually.cpp  GaussianBlurManually.hpp  GaussianBlurOpencv.cpp  GaussianBlurOpencv.hpp  IterateChannels.cpp  IterateChannels.hpp  ManipulationInterface.hpp  ResetChanges.cpp  ResetChanges.hpp  RotateImage.cpp  RotateImage.hpp  SaveImage.cpp  SaveImage.hpp  ShowHelp.cpp  ShowHelp.hpp
bonus-assignment/CS412 Bonus Assignment/CS412 Bonus Assignment/: canny.h  earthmover.h  harris.h  main.cpp  mincostflow.h
bonus-assignment/CS412 Bonus Assignment/CS412 Bonus Assignment.xcodeproj/: project.pbxproj
homework2/: Report.docx  descriptors.py  detectors.py  harris.py  lbp.py  main.py  settings.py  ~$Report.docx
homework2/.ropeproject/: globalnames
(+10 files in other folders)
